hospitalmgmt/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-web
  labels:
    app: tomcat-web
    service: tomcat-web
    env: nonprod
spec:
  selector:
    app: tomcat-web
    service: tomcat-web
    env: nonprod
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
