hospitalmgmt/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: tomcat-web
spec:
    rules:
    - host: portal.hospitalmgmt.com
      http:
          paths:
          - backend:
               serviceName: tomcat-web
               servicePort: 8080
